# cloudwallslashserenity

./: Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.rst  azure-pipelines.yml  requirements.txt  setup.py  tox.ini
capnp/: serenity-fh.capnp
docs/: serenity.dbm
examples/: algo_engine_config.yaml  alpha1.py
jupyterlab/: Dockerfile  Makefile  jupyter_notebook_config.py  requirements.txt
kubernetes/: behemoth-upload.yaml  binance-fh.yaml  binance-recorder.yaml  coinbase-recorder.yaml  coinbasepro-fh.yaml  phemex-fh.yaml  phemex-recorder.yaml  scheduler.yaml  serenity-jupyterlab-storage.yaml  serenity-jupyterlab.yaml  timescaledb-nodeport.yaml  timescaledb-storage.yaml
libcrypto-mktdata/: .gitignore  CMakeLists.txt
libcrypto-mktdata/include/cloudwall/crypto-mktdata/: binance.h  bitfinex.h  bitmex.h  bitstamp.h  coinbase.h  core.h  kraken.h  websocket_client.h
libcrypto-mktdata/src/: binance.cpp  bitfinex.cpp  bitmex.cpp  bitstamp.cpp  coinbase.cpp  core.cpp  kraken.cpp  print_client_tls.cpp  websocket_client.cpp
libcrypto-mktdata/test/: binance_test.cpp  bitfinex_test.cpp  bitmex_test.cpp  bitstamp_test.cpp  coinbase_test.cpp  core_test.cpp  example_match_msg.json  example_status_msg.json  example_ticker_msg.json  example_ticker_no_trade_msg.json  kraken_test.cpp
notebooks/: BeakerX, ipywidgets and Cufflinks.ipynb  Phemex Analysis.ipynb
serenity-db/: requirements.txt  serenity.dbm  serenity.sql
serenity-db/docs/: serenity.dbm
serenity-db/kubernetes/: database-secret-config.yaml  kind-cluster.yaml  kubewatch-config.yaml  kubewatch-pod.yaml  timescaledb.yaml
serenity-db/sql/: serenity.sql
serenity-db/src/cloudwall/serenity/db/: __init__.py  backfill_coinbase_pro.py  backfill_gemini.py  backfill_marks.py  (+3 more)
serenity-fh/: CMakeLists.txt  conan.cmake
serenity-fh/capnp/: serenity-fh.capnp  serenity-fh.capnp.c++  serenity-fh.capnp.h
serenity-fh/cmake/: FindLibCryptoMktData.cmake
serenity-fh/src/: coinbase_main.cpp
serenity-mdrecorder/: azure-pipelines.yml  docker-compose.yml  requirements.txt  setup.py
serenity-mdrecorder/docker/binance_mdrecorder/: Dockerfile
serenity-mdrecorder/docker/coinbase_mdrecorder/: Dockerfile
serenity-mdrecorder/docker/phemex_mdrecorder/: Dockerfile
serenity-mdrecorder/docker/scheduler/: Dockerfile
serenity-mdrecorder/kubernetes/: behemoth-storage.yaml  phemex-recorder.yaml
serenity-ng/: README.md  package-lock.json  package.json
serenity-ng/src/app/: app.component.html
serenity-reporter/: requirements.txt
serenity-research/: Dockerfile  docker-compose.yml  requirements.txt
serenity-research/docker/jupyterlab/: Dockerfile
serenity-research/kubernetes/: serenity-jupyterlab-nodeport.yaml  serenity-jupyterlab.yaml
serenity-research/notebooks/: BeakerX, ipywidgets and Cufflinks.ipynb  Coinbase Pro BTC-USD Analysis.ipynb  Phemex Analysis.ipynb
serenity-ws/cloudwall/serenity/ws/: md_subscribe.py
sql/: serenity.sql
src/serenity/: utils.py
src/serenity/algo/: __init__.py  engine.py
src/serenity/db/: __init__.py  backfill_coinbase.py  backfill_coinbase_pro.py  backfill_gemini.py  backfill_marks.py  install_instruments.py  tax_reporting_2019.py
src/serenity/fh/: behemoth_upload.py  binance_fh.py  coinbase_fh.py  coinbasepro_fh.py  feedhandler.py  phemex_fh.py
src/serenity/marketdata/: __init__.py
src/serenity/marketdata/fh/: behemoth_upload.py  binance_fh.py  coinbasepro_fh.py  feedhandler.py  phemex_fh.py
src/serenity/mdrecorder/: binance.py  coinbase.py  coinbase_backfill.py  phemex.py  phemex_upload.py  scheduler.py  subscriber.py  tickstore.py  tickstore_admin.py
src/serenity/model/: __init__.py  exchange.py  instrument.py  mark.py  marketdata.py  order.py  position.py
src/serenity/signal/: indicators.py  marketdata.py
src/serenity/tickstore/: journal.py  tickstore.py  tickstore_admin.py
src/serenity/trading/: __init__.py
src/serenity/trading/connector/: phemex_api.py  simulator.py
tests/cloudwall/serenity/mdrecorder/: test_coinbase_backfill.py  test_journal.py  test_tickstore.py
tests/serenity/fh/: test_coinbase_backfill.py  test_feedhandler.py
tests/serenity/mdrecorder/: test_coinbase_backfill.py  test_journal.py  test_tickstore.py
tests/serenity/tickstore/: test_journal.py  test_tickstore.py
web/: angular.json  karma.conf.js  package-lock.json  package.json
web/e2e/src/: app.e2e-spec.ts
web/src/: index.html  theme.scss
web/src/app/: angular-material.module.ts  app.component.spec.ts  app.component.ts
(+17 files in other folders)
